4497.	[port]		Add support for OpenSSL 1.1.0. [RT #41284]

4494.	[bug]		Look for <editline/readline.h>. [RT #43429]

4492.	[bug]		irs_resconf_load failed to initialise sortlistnxt
			causing bad writes if resolv.conf contained a
			sortlist directive. [RT #43459]

4491.	[bug]		Improve message emitted when testing whether sendmsg
			works with TOS/TCLASS fails. [RT #43483]

4490.	[maint]		Added AAAA (2001:500:12::d0d) for G.ROOT-SERVERS.NET.

4489.	[security]	It was possible to trigger assertions when processing
			a response. (CVE-2016-8864) [RT #43465]

4488.	[port]		Darwin: use -framework for Kerberos. [RT #43418]

4486.	[bug]		Look in $prefix/lib/pythonX.Y/site-packages for
			the python modules we install. [RT #43330]

4485.	[bug]		Failure to find readline when requested should be
			fatal to configure. [RT #43328]

4484.	[func]		Check prefixes in acls to make sure the address and
			prefix lengths are consistent.  Warn only in
			BIND 9.11 and earlier. [RT #43367]

4483.	[bug]		Address use before require check and remove extraneous
			dns_message_gettsigkey call in dns_tsig_sign.
			[RT #43374]

4476.	[test]		Fix reclimit test on slower machines. [RT #43283]

4475.	[doc]		Update named-checkconf documentation. [RT #43153]

4474.	[bug]		win32: call WSAStartup in fromtext_in_wks so that
			getprotobyname and getservbyname work.  [RT #43197]

4473.	[bug]		Only call fsync / _commit on regular files. [RT #43196]

4472.	[bug]		Named could fail to find the correct NSEC3 records when
			a zone was updated between looking for the answer and
			looking for the NSEC3 records proving nonexistence
			of the answer. [RT #43247]

4471.	[cleanup]	Revert a query logging change inadvertently
			backported from 9.11. [RT #43238]

4468.	[bug]		Address ECS option handling issues. [RT #43191]

4467.	[security]	It was possible to trigger an assertion when
			rendering a message. (CVE-2016-2776) [RT #43139]

4466.	[bug]		Interface scanning didn't work on a Windows system