@@ -134,7 +134,9 @@ struct dig_lookup {
 		sit,
 #endif
 		nsid,   /*% Name Server ID (RFC 5001) */
-		ednsneg;
+		ednsneg,
+		mapped,
+		idnout;
 #ifdef DIG_SIGCHASE
 isc_boolean_t	sigchase;
 #if DIG_SIGCHASE_TD
