@@ -1,5 +1,9 @@
 4497.	[port]		Add support for OpenSSL 1.1.0. [RT #41284]
 
+4496.	[func]		dig: add +idnout to control whether labels are
+			display in punycode or not.  Requires idn support
+			to be enabled at compile time. [RT #43398]
+
 4494.	[bug]		Look for <editline/readline.h>. [RT #43429]
 
 4492.	[bug]		irs_resconf_load failed to initialise sortlistnxt
